feat: init framework